initial styling done

--- a/index.html
+++ b/index.html
@@ -13,9 +13,26 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="container">
-      <div class="madLibsEdit">MadlibsEdit</div>
-      <div class="madLibsPreview">MadlibsPreview</div>
+    <!-- jumbotron -->
+    <div class="bg-info text-white">
+      <div class="container text-sm-center pt-5">
+        <h1 class="display-2">Crazy Word Game</h1>
+        <p class="lead">Choose your words, we do story for you!</p>
+        <img class="mb-4" src="/img/mad-libs-small1.jpg" alt="" />
+      </div>
+    </div>
+    <!-- /jumbotron -->
+
+    <div class="container pt-4">
+      <div class="row">
+        <!-- Madlibs edit -->
+        <div class="col-lg madLibsEdit">MadlibsEdit</div>
+        <!-- /Madlibs edit -->
+
+        <!-- Madlibs preview -->
+        <div class="col-lg madLibsPreview">MadlibsPreview</div>
+        <!-- /Madlibs preview -->
+      </div>
     </div>
 
     <script src="do-not-touch.js"></script>
